--- a/INSTALL
+++ b/INSTALL
@@ -54,16 +54,32 @@ Creating a development environment
 
             git cherry-pick daa1702ec4522a991c5f75b17cb27e15375d2631
             alembic --config development.ini upgrade head
-            git reset --hard HEAD^
 
             To verify the fix, use the alembic history command and check that the
             head revision is "This revision is a lie and should always be head".
-            alembic --config development.ini history
+            `alembic --config development.ini history`
+
+            git reset --hard HEAD^
+
+            Now, we verify that the revision is no longer present, using the command;
+            `alembic --config development.ini history`
+
+            The phrase 'This revision is a lie' should *no longer* be present.
+
 
 5. Run development server.
-
+```
         pserve --reload development.ini
+```
 
 6. The default admin account is:
+```
         email: admin@zookeepr.org
         password: password
+```
+
+You should now have a development instance of ZooKeepr up and running.
+
+Access it at: http://0.0.0.0:6543
+
+*Congratulations*
